Code for rate stick used for fitting.
The plots included in notes.pdf use the rate stick code and data.  The
optimization seems OK.

--- a/like_gun/notes.tex
+++ b/like_gun/notes.tex
@@ -175,8 +175,7 @@ which the algorithm described in Section~\ref{sec:analysis} searches.
 \section{Experiments}
 \label{sec:experiments}
 
-As of 2015-11-1, I have code for only one experiment, the gun, but
-I've written the code with a structure that can accommodate other
+I've written the code with a structure that lets me include more
 experiments easily.  Each experiment must have theory and code that
 provides faux data, Gaussian likelihood as a function of the EOS
 $\eos$ and the derivative of the conditional mean with respect to the
@@ -318,7 +317,6 @@ following methods:
 
 \subsection{A Rate Stick}
 \label{sec:rate-stick}
-\marginpar{Not implemented yet}
 
 Here the data are a sequence of times that a detonation shock is
 measured arriving a locations along a rate stick that is so thick that
@@ -332,42 +330,33 @@ shock.  On page 17 of Fickett and Davis\cite{FickettDavis} Equation
 2.3 expresses the realation as
 \begin{equation}
   \label{eq:Rayleigh}
-  \rho_0^2 D^2 - (p-p_0)/(v_0-v) = 0,
+  \rho_0^2 V^2 - (p-p_0)/(v_0-v) = 0,
 \end{equation}
 with the following notation:
 \begin{description}
 \item[$\rho_0$] The initial density (before detonation wave arrives)
 \item[$v_0\equiv\frac{1}{\rho_0}$] The initial specific volume
 \item[$p_0$] The initial pressure
-\item[$D$] The velocity of the detonation wave
+\item[$V$] The velocity of the detonation wave
 \item[$p$] The pressure at positions behind the wave
 \item[$v$] The specific at positions behind the wave.
 \end{description}
 Rearranging the terms in \eqref{eq:Rayleigh} yields this relation
 between pressure and volume after the shock
 \begin{equation*}
-  p = R(v) \equiv p_0 + \frac{D^2(v_0-v)}{v_0^2}.
+  p = R(v) \equiv p_0 + \frac{V^2(v_0-v)}{v_0^2}.
 \end{equation*}
 At the CJ point, the Rayleigh line is tangent to the isentrope.
 Using
 \begin{align*}
   F(v) &= \eos(v) - R(v) \\
-  F'(v) &= \frac{d \eos}{d v} - \frac{D^2}{v_0^2},
+  F'(v) &= \frac{d \eos}{d v} - \frac{V^2}{v_0^2},
 \end{align*}
 I can write the following conditions for the CJ point:
 \begin{align*}
   F(v_{\text{CJ}}) &= 0 \\
   F'(v_{\text{CJ}}) &= 0.
 \end{align*}
-
-
-
-
-where $D$ is the detonation velocity, $\rho_0\equiv\frac{1}{v_0}$ is
-the density before detonation and $p_0$ is the pressure before
-detonation.
-
-
 
 \subsection{A Cylinder}
 \label{sec:cylinder}
