--- a/local.bib
+++ b/local.bib
@@ -14,8 +14,7 @@
 }
 
 @Book{FickettDavis,
-  ALTauthor = 	 {W. Fickett and W.C. Davis},
-  ALTeditor = 	 {},
+  author = 	 {W. Fickett and W.C. Davis},
   title = 	 {Detonation Theory and Experiment},
   publisher = 	 {Dover},
   year = 	 {1999},
