--- a/monotonic/siads.tex
+++ b/monotonic/siads.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{article} \usepackage{amsmath,amsfonts}
-%\usepackage{showlabels}
+\usepackage{showlabels}
 \usepackage[pdftex]{graphicx,color}
 
 \newcommand{\htop}{{h_{\text{top}}}}
@@ -162,11 +162,14 @@ measure $\measure$ have the following properties:
 \section{Counting Paths}
 \label{sec:counting}
 
-Notation:
+\subsection{Notation}
+\label{sec:notation1}
+
 \begin{description}
+\item[$G \subset [0,1)$] A single interval that is a subset of the
+  unit interval.
 \item[$G_{i,n}$] The interval $\left[ \frac{i}{n}, \frac{i+1}{n}
-  \right)$.  I will often drop the second subscript and sometimes drop
-  both subscripts.
+  \right)$.
 \item[$\G_n$] Set of uniform sub-intervals between 0 and 1
   \begin{equation*}
     \G_n \equiv \left\{ G_{i,n} : 0 \leq i \leq n-1 \right\}
@@ -203,16 +206,35 @@ Notation:
   \begin{equation*}
     N(i,j,m,n,\tau) = \left( A_{n,\tau} \right)^m[i,j].
   \end{equation*}
+\item[$i(g,n)$] The partition element that contains $g$, ie,
+  $g \in G_{i(g,n),n}$.
+\item[$P(G|f,h, \delta)$] The probability that $g(t+\delta) \in G$
+  given $g(t)=f$ and $g(t+2\delta)=h$.
 \end{description}
+\subsection{Probability}
+\label{sec:probability1}
 
-\section{An Integral Operator}
+I hope that the limit in the following definition exists
+\begin{equation}
+  \newcommand\Nin[2]{N\left(#1,#2, n, n, \frac{\delta}{n}\right)}
+  \label{eq:p1}
+  P(G|f,h,\delta) \equiv \lim_{n\rightarrow \infty} \frac{
+    \sum_{j:G\cap G_{j,n} \neq \emptyset} \Nin{i(f)}{j}\Nin{j}{i(h)}}
+  {\sum_j \Nin{i(f)}{j}\Nin{j}{i(h)}}.
+\end{equation}
+Note that to calculate probability conditioned on only one side rather
+than two, one must use an eigenvector of $A$.
+
+\section{Path Volumes}
 \label{sec:operator}
 
-I let $\Aop_\tau$ denote the operator for $\tau = \slope \Delta t$
-with continuous $g$.  (Note: $\tau$ is the only parameter in the
-problem.)  In turn I define $\Aop_\tau$ in terms of the function
-$\Aindicate_\tau$ that has the value one if its arguments are an
-allowed pair $\left( g(0), g(\tau) \right)$ and zero otherwise, viz:
+In Section~\ref{sec:counting} I divided the unit interval into $n$
+segments.  In this section, I replace sums over those intervals with
+integrals.  First I replace the adjacency matrix $A$ of
+Section~\ref{sec:counting} with the integral operator $\Aop_\tau$
+defined in term of the kernel function $\Aindicate_\tau$ that has the
+value one if its arguments are an allowed pair
+$\left( g(0), g(\tau) \right)$ and zero otherwise, viz:
 \begin{subequations}
   \begin{align}
     \label{eq:indicate}
@@ -230,6 +252,35 @@ allowed pair $\left( g(0), g(\tau) \right)$ and zero otherwise, viz:
     &= \int_{\max(g-\tau,0)}^1 \function(h) dh.
   \end{align}
 \end{subequations}
+
+Consider integer time indices $T$ and introduce the notation
+$g_\tau(T)= g(T*\tau)$.  The analog of the number paths for the set of
+paths that go from $g_\tau(0)=f$ to $g_\tau(T+1)$ is a \emph{volume}
+in $\REAL^T$.  For example if $g_\tau(0) = f$ and $g_\tau(2) = h$ the
+volume is the length of the set of allowed values of $g_\tau(1)$,
+namely
+\begin{align*}
+  L &= (f+\tau) - (h-\tau) \\
+  &= f-h+2\tau \\
+  &= \delta(f) \Aop^2 \delta(h).
+\end{align*}
+Given a time step $\tau$ the following function is a conditional
+probability density for $g_\tau(0)=g$ given $g_\tau(-T)=f$ and
+$g_\tau(T)=h$:
+\begin{equation*}
+  p_\tau(g|f,h,T) = \frac{\delta(f) \Aop^T \delta(g) \Aop^T \delta(h)}
+  {\delta(f) \Aop^{2T} \delta(h)}. 
+\end{equation*}
+As with \eqref{eq:p1} I hope that the limit in
+\begin{equation}
+  \label{eq:p2}
+  p(g|f,h,\delta) \equiv \lim_{n\rightarrow\infty}
+  p_{\frac{\delta}{n}} (g|f,h,n)
+\end{equation}
+exists.
+
+\section{Old Eigenfunction Work}
+
 I use the following notation for an eigenvalue of $\Aop_\tau$ and
 corresponding \emph{left} and \emph{right} eigenfunctions:
 \begin{align*}
@@ -749,4 +800,5 @@ For $n$ steps rather than one, the same calculations yield
 %%%---------------
 %%% Local Variables:
 %%% eval: (TeX-PDF-mode)
+%%% eval: (setq ispell-personal-dictionary "./localdict")
 %%% End:
